# test_langgraph_studio_v2

./: .cursorignore  pyproject.toml
assets/: GB_F_headerneu.csv  GB_F_headerneu_correct.csv  MX_F_headerneu.csv  US_F_headerneu.csv  parsed_pos_doku.json  test_mlfb_data.csv
imc_agents/: base_embeddings.py  base_llm.py  costum_embeddings_model.py  costum_llm_model.py
imc_agents/agents/: data_validation_agent.py  onboarding_agent.py  state.py  supervisor_agent.py
imc_agents/tests/: test_api.py  test_api_costum.py  test_api_openai.py  test_api_tools.py  test_costum_model_completion.py  test_data_checker.py  test_data_improvement.py  test_data_validation_agent.py  test_embeddings.py  test_graph.py  test_llm_wrapper.py  test_mlfb.py  test_multi_agent.py  test_onboarding_agent.py  test_supervisor_agent.py  test_toolcall.py  test_tools_format.py
imc_agents/utils/: data_checker.py
imc_norm/: product_number_check_service.py  product_number_check_service_impl.py
imc_ui/: mainui.py
src/agent/: graph.py
